--- a/src/main/resources/hr/tvz/pejkunovic/highfrontier/chooseRoverToPutView.fxml
+++ b/src/main/resources/hr/tvz/pejkunovic/highfrontier/chooseRoverToPutView.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
 
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="257.0" prefWidth="384.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ChoiceBox layoutX="45.0" layoutY="116.0" prefHeight="20.0" prefWidth="294.0" />
+      <Label layoutX="87.0" layoutY="46.0" text="Choose which rover you want to deploy" />
+      <Button layoutX="150.0" layoutY="190.0" mnemonicParsing="false" text="Deploy rover" />
+   </children>
 </AnchorPane>
