--- a/src/main/resources/hr/tvz/pejkunovic/highfrontier/playerResourcesView.fxml
+++ b/src/main/resources/hr/tvz/pejkunovic/highfrontier/playerResourcesView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
@@ -22,5 +23,11 @@
       <Label fx:id="engineLabel" layoutX="151.0" layoutY="161.0" text="Your rocket has a blank blank engine" />
       <Label layoutX="26.0" layoutY="376.0" text="Your rovers" />
       <Label fx:id="roversLabel" alignment="TOP_LEFT" layoutX="26.0" layoutY="407.0" prefHeight="172.0" prefWidth="303.0" />
+      <Button layoutX="210.0" layoutY="310.0" mnemonicParsing="false" onAction="#buyFuel" text="Transform" />
+      <Label layoutX="200.0" layoutY="283.0" text="1 water=100 fuel" />
+      <Label layoutX="165.0" layoutY="210.0" text="Water:" />
+      <Label layoutX="164.0" layoutY="244.0" text="Fuel:" />
+      <Label fx:id="waterLabel" layoutX="245.0" layoutY="210.0" text="Label" />
+      <Label fx:id="fuelLabel" layoutX="245.0" layoutY="244.0" text="Label" />
    </children>
 </AnchorPane>
