--- a/src/main/resources/hr/tvz/pejkunovic/highfrontier/spaceLocationInfo.fxml
+++ b/src/main/resources/hr/tvz/pejkunovic/highfrontier/spaceLocationInfo.fxml
@@ -12,6 +12,7 @@
       <Text layoutX="16.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Object type" />
       <Text fx:id="typeButton" layoutX="227.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type" />
       <Text layoutX="14.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-      <Button fx:id="moveButton" layoutX="124.0" layoutY="343.0" mnemonicParsing="false" onAction="#move" text="Move" />
+      <Button fx:id="moveButton" layoutX="77.0" layoutY="342.0" mnemonicParsing="false" onAction="#move" text="Move" />
+      <Button fx:id="chooseRoverButton" layoutX="175.0" layoutY="342.0" mnemonicParsing="false" onAction="#openChooseRover" text="Place rover" />
    </children>
 </AnchorPane>
