--- a/src/main/resources/hr/tvz/pejkunovic/highfrontier/universeMapView.fxml
+++ b/src/main/resources/hr/tvz/pejkunovic/highfrontier/universeMapView.fxml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="750.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.tvz.pejkunovic.highfrontier.UniverseMapController">
+<AnchorPane fx:id="anchorPane" prefHeight="750.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.tvz.pejkunovic.highfrontier.UniverseMapController">
    <children>
       <Circle layoutX="553.0" layoutY="236.0" radius="111.0" stroke="BLACK" strokeType="INSIDE">
          <fill>
@@ -53,5 +59,26 @@
       <Button fx:id="roverShopButton" layoutX="81.0" layoutY="42.0" mnemonicParsing="false" onAction="#openRoverShop" text="Buy rovers" />
       <Button layoutX="176.0" layoutY="42.0" mnemonicParsing="false" onAction="#openEngineShop" text="Buy engine" />
       <Button layoutX="278.0" layoutY="42.0" mnemonicParsing="false" onAction="#openPlayerResources" text="Player resources" />
+      <TableView fx:id="tableView" layoutX="902.0" layoutY="550.0" prefHeight="200.0" prefWidth="597.0">
+        <columns>
+          <TableColumn fx:id="nameColumn" prefWidth="300.79998779296875" text="Player" />
+          <TableColumn fx:id="pointsColumn" prefWidth="294.4000244140625" text="Victory points" />
+        </columns>
+      </TableView>
+      <Button layoutX="1406.0" layoutY="495.0" mnemonicParsing="false" onAction="#endTurn" text="End turn" />
+      <Button layoutX="406.0" layoutY="42.0" mnemonicParsing="false" onAction="#openDeployment" text="Deployment information" />
+      <Button layoutX="576.0" layoutY="42.0" mnemonicParsing="false" onAction="#openOpponentResources" text="Opponent Information" />
+      <Label layoutX="732.0" layoutY="9.0" prefHeight="68.0" prefWidth="110.0" text="Turn:">
+         <font>
+            <Font size="42.0" />
+         </font>
+      </Label>
+      <Label fx:id="turnLabel" layoutX="852.0" layoutY="12.0" text="20">
+         <font>
+            <Font size="42.0" />
+         </font>
+      </Label>
+      <TextField fx:id="chatMessageTextField" layoutX="7.0" layoutY="711.0" onAction="#sendChatMessage" prefHeight="26.0" prefWidth="886.0" />
+      <TextArea fx:id="chatMessageTextArea" layoutX="7.0" layoutY="508.0" prefHeight="200.0" prefWidth="886.0" />
    </children>
 </AnchorPane>
